# apertium-ncx

./: Makefile  Makefile.am  README  apertium-ncx.lexb  apertium-ncx.ncx.lexc  apertium-ncx.ncx.spellrelax  apertium-ncx.ncx.twol  apertium-ncx.pc.in  backup.apertium.lexb  configure.ac  configure~  modes.xml  ncx.gen.hfst  ncx.lexc  ncx.lexc.hfst  ncx.mor.hfst  ncx.twol  ncx.twol.hfst  old_Makefile  testncx.lexc
corpus/: casanova_stories.txt  example_sents.txt
corpus/originals_and_intermediates/: E02.txt  GCCOPY 1.TXT  L01.txt  fiction.txt
scripts/: compile_lexb.py
speller/: index.xml
test/: tests.json
